Overview of changed in protoc-gen-vala 0.0.3

  * Fix sint64 encoding on 32 bit systems

Overview of changed in protoc-gen-vala 0.0.2

  * Support all basic data types
  * Create libprotobuf-vala library
  * Use classes for encode and decode buffers
  * Record version in generated files
  * Add regression tests

Overview of changed in protoc-gen-vala 0.0.1

  * Initial release